--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,8 @@ header.masthead  {
   visibility: hidden;
   width: 300px;
   height: 350px;  
+  background-color: black;
+  padding: 10px;
 }
 
 footer {
